Fixes high priority findbugs issues