@@ -101,7 +101,7 @@ public class Concept extends NodeProperties {
 
   @Override
   public int hashCode() {
-    return new Long(getId()).hashCode();
+    return Long.valueOf(getId()).hashCode();
   }
 
   @Override
